--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "rj-xhr",
   "main": "dist/main.js",
   "scripts": {
+    "lint:prettier": "prettier {src,build}/**/*.js --list-different --write",
     "dev": "webpack --config ./build/webpack.dev.js",
     "prod": "webpack --config ./build/webpack.prod.js"
   },
@@ -14,11 +15,12 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^3.0.0",
+    "prettier": "^1.18.2",
     "webpack": "^4.38.0",
     "webpack-cli": "^3.3.6",
-    "webpack-merge": "^4.2.1",
-    "clean-webpack-plugin": "^3.0.0"
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {}
 }
