--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint:prettier": "prettier {src,build}/**/*.js --list-different --write",
     "dev": "webpack --config ./build/webpack.dev.js",
-    "prod": "webpack --config ./build/webpack.prod.js"
+    "prod": "webpack --config ./build/webpack.prod.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -14,9 +15,11 @@
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "@babel/preset-typescript": "^7.3.3",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^3.0.0",
+    "jest": "^24.8.0",
     "prettier": "^1.18.2",
     "webpack": "^4.38.0",
     "webpack-cli": "^3.3.6",
